--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/formation.css">
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/footer.css">
     
     <title>Portfólio</title>
 </head>
@@ -217,6 +218,9 @@
         <a href="#header"><img src="css/images/chevron-up-circle-outline.svg" alt=""></a>
     </div>
    </section>
+   <footer>
+    <p>Desenvolvido por Max Zampieri</p>
+   </footer>
    <script src="script.js"></script>
 </body>
 </html>
