--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="slide">
                     <img src="css/images/decodificador.png" alt="">
                     <a href="https://maxzampieri.github.io/challenge_one/"target="_blank">
-                        <p>Descriptador</p>
+                        <p>Codificador</p>
                     </a>
                 </div>
                 <div class="slide">
