--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon.ico">
     
     <title>Portfólio</title>
 </head>
