--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon.ico">
+    <script src="https://kit.fontawesome.com/02a1b0e1a6.js" crossorigin="anonymous"></script>
     
     <title>Portfólio</title>
 </head>
@@ -61,11 +62,39 @@
             <h1>Sobre mim</h1>
             <p>Obrigado por visitar meu Portfólio! <br> Me chamo Max e sou desenvolvedor Front-End, comecei meus estudos em Dezembro de 2021, desde lá fiz vários cursos voltados ao desenvolvimento web, alguns Bootcamps e atualmente estou cursando dois programas de formação Front-End <a href="https://www.oracle.com/br/education/oracle-next-education/" target="_blank">Alura/Oracle</a> e <a href="https://www.entra21.com.br/"target="_blank">Entra21</a> ambos com uma excelente grade curricular e duração de seis meses.<br>Dentre minhas principais Soft-Skills posso destacar a criatividade, curiosidade, comunicação e trabalho em equipe.</p>  
         </div>
-        <div class="content__buttons___about">
+        <div class="container_cards">
+            <div class="card">
+              <a href="https://www.instagram.com/maxzampieri23/" target="_blank">
+                  <div class="face face--front"><i class="fa fa-instagram"></i></div>
+                  <div class="face face--back">Instagram</div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="https://www.linkedin.com/in/max-zampieri/"target="_blank">
+                  <div class="face face--front"><i class="fa fa-linkedin"></i></div>
+                  <div class="face face--back">LinkedIn</div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="https://github.com/MaxZampieri"target="_blank">
+                  <div class="face face--front"><i class="fa fa-github"></i></div>
+                  <div class="face face--back">GitHub</div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="https://drive.google.com/file/d/1guTWWvMPKpTeI3Lmk1aK9nZ-Q4kAGawi/view?usp=sharing"target="_blank">
+                  <div class="face face--front"><i class="fa-regular fa-address-card"></i></i></div>
+                  <div class="face face--back">Curriculo</div>
+              </a>
+            </div>
+          </div>
+          <div class="content__buttons___about">
             <a href="https://github.com/MaxZampieri"target="_blank"><button class="content__buttons___btn___about">GitHub</button></a>
             <a href="https://www.linkedin.com/in/max-zampieri/"target="_blank"><button class="content__buttons___btn___about">LinkedIn</button></a>
             <a href="https://drive.google.com/file/d/1guTWWvMPKpTeI3Lmk1aK9nZ-Q4kAGawi/view?usp=sharing"target="_blank"><button class="content__buttons___btn___about">Curriculo</button></a>
         </div>
+
+       
    </section>
    <section id="skills__hobbies">
     <h1>Skills</h1>
