--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon_m_medio.png">
     <script src="https://kit.fontawesome.com/02a1b0e1a6.js" crossorigin="anonymous"></script>
     
     <title>Portfólio</title>
@@ -60,7 +60,7 @@
    <section class="about__me" id="about__me">
         <div class="about__me___content">
             <h1>Sobre mim</h1>
-            <p>Obrigado por visitar meu Portfólio! <br> Me chamo Max e sou desenvolvedor Front-End, comecei meus estudos em Dezembro de 2021, desde lá fiz vários cursos voltados ao desenvolvimento web, alguns Bootcamps e atualmente estou cursando dois programas de formação Front-End <a href="https://www.oracle.com/br/education/oracle-next-education/" target="_blank">Alura/Oracle</a> e <a href="https://www.entra21.com.br/"target="_blank">Entra21</a> ambos com uma excelente grade curricular e duração de seis meses.<br>Dentre minhas principais Soft-Skills posso destacar a criatividade, curiosidade, comunicação e trabalho em equipe.</p>  
+            <p>Obrigado por visitar meu Portfólio! <br><br> Me chamo Max e sou desenvolvedor Front-End, comecei meus estudos em Dezembro de 2021, desde lá fiz vários cursos voltados ao desenvolvimento web, alguns Bootcamps e atualmente estou cursando dois programas de formação Front-End <a href="https://www.oracle.com/br/education/oracle-next-education/" target="_blank">Alura/Oracle</a> e <a href="https://www.entra21.com.br/"target="_blank">Entra21</a> ambos com uma excelente grade curricular e duração de seis meses.<br>Dentre minhas principais Soft-Skills posso destacar a criatividade, curiosidade, comunicação e trabalho em equipe.</p>  
         </div>
         <div class="container_cards">
             <div class="card">
@@ -112,8 +112,8 @@
             <h2>JAVASCRIPT</h2>
         </div>
         <div class="skill__cards">
-            <img src="css/images/color-palette-outline.svg" alt="">
-            <h2>UX DESIGN</h2>
+            <img src="css/images/icon_ux.svg" alt="">
+            <h2>UI/UX</h2>
         </div>
         <div class="skill__cards">
             <img src="css/images/logo-react.svg" alt="">
